# E-commerce

./: .coverage  README.md  pyproject.toml  report.html
src/: base_order_cat.py  category.py  lawn_grass.py  main.py  order.py  product.py  product_iterator.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawn_grass.py  test_print_mixin.py  test_product.py  test_smartphone.py
